; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_wifi/test/esp32/extr_test_wifi.c_test_wifi_connection_sta.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_wifi/test/esp32/extr_test_wifi.c_test_wifi_connection_sta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"SoftAP mac\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"STA connected\00", align 1
@wifi_events = common dso_local global i32 0, align 4
@DISCONNECT_EVENT = common dso_local global i32 0, align 4
@portTICK_RATE_MS = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [13 x i8] c"wait finish\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_wifi_connection_sta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_wifi_connection_sta() #0 {
  %1 = alloca [19 x i8], align 16
  %2 = alloca [6 x i32], align 16
  %3 = alloca i64, align 8
  %4 = call i32 (...) @test_case_uses_tcpip()
  %5 = call i32 (...) @start_wifi_as_sta()
  %6 = getelementptr inbounds [19 x i8], [19 x i8]* %1, i64 0, i64 0
  %7 = call i32 @unity_wait_for_signal_param(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %6, i32 19)
  %8 = getelementptr inbounds [19 x i8], [19 x i8]* %1, i64 0, i64 0
  %9 = getelementptr inbounds [6 x i32], [6 x i32]* %2, i64 0, i64 0
  %10 = call i32 @unity_util_convert_mac_from_string(i8* %8, i32* %9)
  %11 = call i32 @TEST_ASSERT_TRUE(i32 %10)
  %12 = getelementptr inbounds [6 x i32], [6 x i32]* %2, i64 0, i64 0
  %13 = call i32 @wifi_connect_by_bssid(i32* %12)
  %14 = call i32 @unity_send_signal(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %15 = load i32, i32* @wifi_events, align 4
  %16 = load i32, i32* @DISCONNECT_EVENT, align 4
  %17 = load i32, i32* @portTICK_RATE_MS, align 4
  %18 = sdiv i32 60000, %17
  %19 = call i64 @xEventGroupWaitBits(i32 %15, i32 %16, i32 1, i32 0, i32 %18)
  store i64 %19, i64* %3, align 8
  %20 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %21 = load i64, i64* %3, align 8
  %22 = icmp eq i64 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @TEST_ASSERT(i32 %23)
  %25 = call i32 (...) @stop_wifi()
  ret void
}

declare dso_local i32 @test_case_uses_tcpip(...) #1

declare dso_local i32 @start_wifi_as_sta(...) #1

declare dso_local i32 @unity_wait_for_signal_param(i8*, i8*, i32) #1

declare dso_local i32 @TEST_ASSERT_TRUE(i32) #1

declare dso_local i32 @unity_util_convert_mac_from_string(i8*, i32*) #1

declare dso_local i32 @wifi_connect_by_bssid(i32*) #1

declare dso_local i32 @unity_send_signal(i8*) #1

declare dso_local i64 @xEventGroupWaitBits(i32, i32, i32, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @stop_wifi(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
